--- a/package.json
+++ b/package.json
@@ -9,21 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.12",
-    "expo": "~51.0.34",
+    "expo": "^52.0.7",
+    "expo-asset": "^11.0.1",
+    "expo-blur": "~14.0.1",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
+    "react-nativescript": "^5.0.0",
+    "expo-font": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "typescript": "^5.1.3",
-    "babel-plugin-module-resolver": "^5.0.0"
+    "@types/react-native": "^0.72.8",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
