--- a/app.json
+++ b/app.json
@@ -1,11 +1,16 @@
 {
   "expo": {
-    "name": "TinderClone",
+    "name": "Tinder",
     "slug": "com.clone.tinder",
     "version": "1.0.0",
+    "icon": "./assets/icon.png",
     "android": {
       "package": "com.clone.tinder",
-      "newArchEnabled": true
+      "newArchEnabled": true,
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/icon.png",
+        "backgroundColor": "#ffffff"
+      }
     },
     "ios": {
       "bundleIdentifier": "com.clone.tinder",
