--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "expo": "^52.0.7",
     "expo-asset": "^11.0.1",
     "expo-blur": "~14.0.1",
+    "expo-font": "~13.0.1",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-svg": "15.8.0",
-    "react-nativescript": "^5.0.0",
-    "expo-font": "~13.0.1"
+    "react-native-svg": "^15.8.0",
+    "react-nativescript": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
