--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
     "name": "Tinder",
-    "slug": "com.clone.tinder",
+    "slug": "datingapp",
     "version": "1.0.0",
     "icon": "./assets/icon.png",
     "android": {
-      "package": "com.clone.tinder",
+      "package": "com.ignitiondating.datingapp",
       "newArchEnabled": true,
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
@@ -13,11 +13,17 @@
       }
     },
     "ios": {
-      "bundleIdentifier": "com.clone.tinder",
+      "bundleIdentifier": "com.ignitiondating.datingapp",
       "newArchEnabled": true
     },
     "plugins": [
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "cafe5c42-7da0-4c09-b049-cc9cc035122e"
+      }
+    },
+    "owner": "tyhenkel"
   }
 }
