--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
+    "build-preview": "eas build --profile preview --platform ios",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
@@ -16,6 +17,7 @@
     "expo-blur": "~14.0.1",
     "expo-dev-client": "^5.0.3",
     "expo-font": "~13.0.1",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
