--- a/package.json
+++ b/package.json
@@ -4,28 +4,28 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "build-preview": "eas build --profile preview --platform ios",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "prebuild": "expo prebuild",
+    "build:ios": "eas build --local --platform ios"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "expo": "^52.0.7",
+    "expo": "~51.0.34",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "expo-asset": "^11.0.1",
     "expo-blur": "~14.0.1",
     "expo-dev-client": "^5.0.3",
     "expo-font": "~13.0.1",
     "expo-image-picker": "~14.7.1",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-svg": "15.8.0",
-    "react-nativescript": "^5.0.0"
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
