--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-tinder-clone",
+  "name": "dating-app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -15,29 +15,31 @@
     "deploy-ios": "eas submit --platform ios"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "expo": "~51.0.34",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-status-bar": "~1.6.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "expo": "~51.0.0",
+    "expo-blur": "~13.0.2",
+    "expo-dev-client": "~4.0.29",
+    "expo-font": "~12.0.10",
+    "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-router": "^3.4.6",
+    "expo-splash-screen": "~0.27.7",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "expo-asset": "^11.0.1",
-    "expo-blur": "~14.0.1",
-    "expo-dev-client": "^5.0.3",
-    "expo-font": "~13.0.1",
-    "expo-image-picker": "~14.7.1",
-    "react-native-svg": "15.8.0"
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
-    "@types/react-native": "^0.72.8",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "react-native-svg-transformer": "^1.5.0",
-    "typescript": "^5.1.3"
+    "@types/react": "~18.2.45",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "react-native-svg-transformer": "^1.3.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
