add build number

--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
     "userInterfaceStyle": "light",
     "assetBundlePatterns": ["**/*"],
     "ios": {
+      "buildNumber": "2",
       "supportsTablet": true,
       "bundleIdentifier": "com.ignitiondating.datingapp",
       "config": {
